# GLadMe

./: .env.example  .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml  runstack  tsconfig.json  vite.config.ts
.cursor/plans/: GLadMe_packaging_plan.md  open_dj6_packaging_plan.md
ai/: __init__.py  openrouter_gateway.py
ai/management/commands/: ai_chat.py
common/: __init__.py
common/middleware/: __init__.py  inertia_shared.py
common/models/: __init__.py  base.py  mixins.py
common/services/: __init__.py  base.py  contracts.py  registry.py
config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
frontend/: main.tsx
frontend/pages/Home/: Index.tsx
frontend/styles/: app.css
templates/: base_inertia.html
tests/: test_inertia_smoke.py  test_models.py  test_openrouter_gateway.py  test_service_registry.py
web/: __init__.py  models.py  urls.py  views.py
web/migrations/: 0001_initial.py
